--- a/views/add.html
+++ b/views/add.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <%- include('navbar.html') %>
-       <form action="/add" method="post">
+       <form action="/add" method="post" enctype="multipart/form-data">
  
             <input type="file" name="picture" />
             <input type="submit" />
