--- a/views/navbar.html
+++ b/views/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Reko</a>
+        <a class="navbar-brand" href="/">Reko</a>
         <button
             class="navbar-toggler"
             type="button"
@@ -13,6 +13,11 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="/add">Ajouter une image</a>
+                </li>
+        
             <form action="/" method="get" class="d-flex" role="search">
                 <input
                     class="form-control me-2"
